# mysummerjob

./: .ccls  .clang-format  .clang-tidy  .gitignore  .gitmodules  Dockerfile  README.md  meson.build  mingw.cross
.github/: install_dependencies.sh  runner.sh
.github/workflows/: main.yml
data/: config.ini  meson.build
data/models/: hurja.mtl
data/shaders/: meson.build  obj.frag  obj.vert  simple.vert
include/config/: config.h
include/core/: eventqueue.h  subsystemregistry.h  userinputhandler.h  workqueue.h
include/core/model/: model.h  vertex.h
include/core/scene/: camera.h  components.h  scene.h
include/core/texture/: gli.h  texture.h
include/core/vulkan/: descriptorgen.h  device.h  utils.h
include/event/: applicationevents.h  event.h  keyevent.h  monitor.h  setupevents.h  sub.h  updateevents.h
include/logs/: log.h
include/timer/: timer.h
include/ui/: imguilayer.h
include/utils/: namedtype.h  singleton.h  stringutils.h
src/: application.cpp  application.h  config.cpp  implementations.cpp  main.cpp  meson.build
src/core/: eventqueue.cpp  meson.build  subsystemregistry.cpp  userinputhandler.cpp  workqueue.cpp
src/core/model/: meson.build  model.cpp  vertex.cpp
src/core/scene/: camera.cpp  meson.build  scene.cpp
src/core/texture/: meson.build  texture.cpp
src/core/vulkan/: context.cpp  context.h  debugutils.cpp  debugutils.h  descriptorgen.cpp  device.cpp  imguisetup.cpp  imguisetup.h  meson.build  swapchain.cpp  swapchain.h  uilayer.cpp  uilayer.h  utils.cpp
src/event/: event.cpp  meson.build
src/logs/: log.cpp  meson.build
src/platform/: meson.build
src/platform/linux_wayland/: input.cpp  window.cpp  window.h
src/ui/: imguilayer.cpp  meson.build
src/utils/: meson.build  stringutils.cpp
subprojects/: glfw.wrap  glm.wrap  spdlog.wrap  vulkan-headers.wrap  vulkan-validationlayers.wrap
tools/: dockerizer.sh
unittests/: dispatchertests.cpp  meson.build  multicasttests.cpp  namedtype.cpp  signalslottests.cpp  singletonpattern.cpp  subsystemtests.cpp  threadpool.cpp  utilityfunctions.cpp
